--- a/gra/bn_intro.tex
+++ b/gra/bn_intro.tex
@@ -4,9 +4,10 @@
 \usepackage{enumerate}
 \usepackage{hyperref}
 \usepackage{verbatim}
-\usepackage[ngerman]{babel}
 \usepackage{array}
 \usepackage{longtable}
+\usepackage{babel}[ngerman]
+\usepackage{csquotes}[autostyle]
 
 \hypersetup{colorlinks=false, pdfborderstyle={/S/U/W 1}}
 
@@ -29,7 +30,7 @@ GRA schreiben.
     Bitte installiere \href{https://learn.microsoft.com/de-de/windows/wsl/install}{Windows Subsystem for Linux (WSL)}.
     Du kannst dann jederzeit WSL einfach vom Startmenü aus starten und erhälst ein voll funktionsfähiges Ubuntu.
     Du kannst auf die in deiner WSL-Umgebung gespeicherten Daten über den Datei-Explorer zugreifen, dafür gibts den Befehl
-    \glqq\verb|explorer.exe .|\grqq{} (den letzten Punkt nicht vergessen).\\
+    \verb|explorer.exe .| (den letzten Punkt nicht vergessen).\\
     Ich würde stark davon abraten, alles nativ in der Windows Command Line versuchen zum Laufen zu bringen.
     \subsection{Linux}
     Falls bereits irgendeine Linux-Distro auf deinem Rechner läuft, hast du alles
