--- a/era/era_slides_w12.tex
+++ b/era/era_slides_w12.tex
@@ -42,6 +42,9 @@
 \usepackage{listings}
 \usepackage{circuitikz}
 %\usepackage[european]{circuitikz}
+\usepackage{babel}[ngerman]
+\usepackage{csquotes}[autostyle]
+\usepackage[useregional]{datetime2}
 
 % image path
 \graphicspath{ {./resources/} }
@@ -52,7 +55,7 @@
 \author{Niklas Ladurner}
 
 \institute{\theChairName\\\theDepartmentName\\\theUniversityName}
-\date[\today]{\today}
+\date{\DTMdisplaydate{2024}{1}{19}{-1}}
 
 \footline{\insertauthor~|~\insertshorttitle~|~\insertshortdate}
 
@@ -137,7 +140,7 @@
           \begin{enumerate}
             \item Wähle Variable $x_i$ und belege sie in allen Klauseln $\omega_i$
             \item Kann die Belegung anderer Variablen dadurch abgeleitet werden? (Propagation)
-            \item Bei Konflikten aus Implikationsgraph \glqq gelernte Klausel\grqq\; ableiten, dann Backtracking
+            \item Bei Konflikten aus Implikationsgraph \enquote{gelernte Klausel} ableiten, dann Backtracking
             \item So lange fortführen bis erfüllende Belegung gefunden
           \end{enumerate}
   \end{itemize}
@@ -170,8 +173,8 @@
 
 \begin{frame}[fragile, c]{Links}{}
   \begin{itemize}
-    \item Zulip: \href{https://zulip.in.tum.de/#narrow/stream/1917-ERA-Tutorium---Mi-1600-MI4}{\glqq ERA Tutorium - Mi-1600-MI4\grqq}
-          bzw. \href{https://zulip.in.tum.de/#narrow/stream/1940-ERA-Tutorium---Fr-1100-MW2}{\glqq ERA Tutorium - Fr-1100-MW2\grqq}
+    \item Zulip: \href{https://zulip.in.tum.de/#narrow/stream/1917-ERA-Tutorium---Mi-1600-MI4}{\enquote{ERA Tutorium - Mi-1600-MI4}}
+    bzw. \href{https://zulip.in.tum.de/#narrow/stream/1940-ERA-Tutorium---Fr-1100-MW2}{\enquote{ERA Tutorium - Fr-1100-MW2}}
     \item \href{https://en.wikipedia.org/wiki/Boolean_satisfiability_problem}{Wikipedia zu SAT}
   \end{itemize}
 \end{frame}
