Some small improvements

--- a/era2/era2_slides_w03.tex
+++ b/era2/era2_slides_w03.tex
@@ -109,6 +109,7 @@
 \end{frame}
 
 \begin{frame}[c, fragile]{Sprungbefehle}{}
+  \vspace{-1cm}
   \begin{columns}
     \begin{column}{0.5\textwidth}
       \begin{center}\textbf{Branch-Befehle}\end{center}
