add slides for w04

--- a/era/era_slides_w04.tex
+++ b/era/era_slides_w04.tex
@@ -124,7 +124,7 @@
   \begin{itemize}
     \item \enquote{Aufrufkonvention} $\rightarrow$ lediglich eine Vereinbarung
     \item definiert Parameterüberabe, Rückgabe, Registersicherung, Stack etc.
-    \item Datentypen $\le$ 4 Byte in a-Registern, evtl. signextension
+    \item Datentypen $\le$ 4 Byte in a-Registern, signextended
     \item Datentypen = 8 Byte in 2 a-Registern, niedrigwertige Hälfte zuerst
     \item Datentypen > 8 Byte als Pointer (Zeiger auf Speicher)
     \item Falls zu wenige Register: Übergabe über Stack
@@ -151,7 +151,7 @@
 
 \begin{frame}[c]{Artemis-Hausaufgaben}{}
   \begin{itemize}
-    \item H04 - Tribonacci bis 19.11.2023 23:59 Uhr
+    \item H04 --- Tribonacci bis 19.11.2023 23:59 Uhr
     \item Implementierung einer rekursiven Funktion
     \item Aufbau von Folie \enqutote{Rekursion}beachten
     \item Einhaltung der CC verpflichtend $\rightarrow$ siehe Link
