--- a/era2/era2_slides_w06.tex
+++ b/era2/era2_slides_w06.tex
@@ -271,7 +271,7 @@
  \begin{block}{Funktionale Vollständigkeit}
       Eine Menge $\mathcal{F}$ boolescher Funktionen heißt funktional vollständig, falls alle booleschen Funktionen als Kombination von $f_i\in\mathcal{F}$ darstellbar sind. Beispiel: $\{\wedge, \neg\}$
  \end{block}
- \vspace{}
+ \vfill
  \begin{block}{Dualität}
   Gegeben eine boolesche Formel $f$, erhält man den dazugehörigen dualen Ausdruck $f^D$ durch Ersetzung: $\{0\mapsto 1; 1\mapsto 0; \wedge\mapsto\vee; \vee\mapsto\wedge\}$. Es gilt $f \Leftrightarrow f^D$.\footnotemark
 \end{block}
@@ -330,8 +330,8 @@
     \item \href{https://riscv.org/wp-content/uploads/2017/05/riscv-spec-v2.2.pdf}{RISC-V-Spezifikation}
     \item \href{https://www.moodle.tum.de/course/view.php?id=100633}{ERA-Moodle-Kurs}
     \item \href{https://artemis.in.tum.de/courses/401}{ERA-Artemis-Kurs}
-    \item \href{https://en.wikipedia.org/wiki/Cache_placement_policies}{Wikipedia zu Caches}
-    \item \href{https://www.elektronik-kompendium.de/sites/com/0309291.htm}{Elektronik-Kompendium zu Caches}
+    \item \href{https://www.elektronik-kompendium.de/sites/dig/2609191.htm}{Elektronik-Kompendium zu logischen Grundschaltungen}
+    \item \href{https://github.com/hneemann/Digital}{Repository: Digital}
   \end{itemize}
 \end{frame}
 
