simplify expression so Bjarne understands it

--- a/era2/era2_slides_w06.tex
+++ b/era2/era2_slides_w06.tex
@@ -273,7 +273,7 @@
  \end{block}
  \vfill
  \begin{block}{Dualität}
-  Gegeben eine boolesche Formel $f$, erhält man den dazugehörigen dualen Ausdruck $f^D$ durch Ersetzung: $\{0\mapsto 1; 1\mapsto 0; \wedge\mapsto\vee; \vee\mapsto\wedge\}$. Es gilt $f \Leftrightarrow f^D$.\footnotemark
+  Gegeben eine boolesche Formel $f$, erhält man den dazugehörigen dualen Ausdruck $f^D$ durch Ersetzung: $\{0\mapsto 1; 1\mapsto 0; \wedge\mapsto\vee; \vee\mapsto\wedge\}$. Es gilt $f = g\Leftrightarrow f^D = g^D$.\footnotemark
 \end{block}
 \footnotetext{Aussage lediglich über Wahrheitsgehalt der Formeln, nicht über Erfüllbarkeitsäquivalenz}
 \end{frame}
