--- a/era2/era2_slides_w07.tex
+++ b/era2/era2_slides_w07.tex
@@ -74,7 +74,7 @@
 \setbeamercolor{footnote mark}{fg=black}
 
 % presentation metadata
-\title{Übung 07: Sequentielle\\Schaltungen}
+\title{Übung 07: Sequentielle \\Schaltungen}
 \subtitle{Einführung in die Rechnerarchitektur}
 \author{Niklas Ladurner}
 
@@ -183,7 +183,7 @@
 				\begin{circuitikz}
 					\node[flipflop SR] (sr) {};
 					\node[right of=sr, xshift=2cm] (arr) {
-						\[
+						$\displaystyle
 							\begin{array}{|c|c|c|}
 								\hline
 								S & R & Q                 \\
@@ -194,7 +194,7 @@
 								1 & 1 & ?                 \\
 								\hline
 							\end{array}
-						\]};
+						$};
 				\end{circuitikz}
 			\end{center}
 		\end{column}
@@ -211,7 +211,7 @@
 				\begin{circuitikz}
 					\node[flipflop D] (dff) {};
 					\node[right of=dff, xshift=2cm] (arr) {
-						\[
+						$\displaystyle
 							\begin{array}{|c|c|c|}
 								\hline
 								CLK             & D & Q                 \\
@@ -222,7 +222,7 @@
 								\texttiming{LH} & 1 & 1                 \\
 								\hline
 							\end{array}
-						\]};
+						$};
 				\end{circuitikz}
 			\end{center}
 		\end{column}
