--- a/era2/era2_slides_w01.tex
+++ b/era2/era2_slides_w01.tex
@@ -17,6 +17,7 @@
 % and provide a description and minimal working example of your problem.
 %%
 
+\PassOptionsToClass{onlytextwidth}{beamer}
 
 \documentclass[
   german,            % define the document language (english, german)
