--- a/era2/era2_slides_w03.tex
+++ b/era2/era2_slides_w03.tex
@@ -17,6 +17,8 @@
 % and provide a description and minimal working example of your problem.
 %%
 
+\PassOptionsToClass{onlytextwidth}{beamer}
+
 \documentclass[
   german,            % define the document language (english, german)
   aspectratio=169,    % define the aspect ratio (169, 43)
@@ -146,7 +148,7 @@
 
 \begin{frame}[c, fragile]{Sections und Direktiven}
   \begin{columns}[c]
-    \begin{column}{0.5\textwidth}
+    \begin{column}{0.45\textwidth}
       \begin{minted}{gas}
 # compile-time Konstante
 .equ NUM, 2748 
@@ -161,16 +163,15 @@
   arr: .byte 4, 3, 2, 1
   string1: .ascii "asdf"
   string2: .asciz "asdf"
-
         \end{minted}
     \end{column}
-    \begin{column}{0.5\textwidth}
+    \begin{column}{0.45\textwidth}
       \begin{minted}{gas}
 # rw + uninit. Daten
 .bss
   a: .space 16
 
-# definiere globales Einstiegslabel
+# globales Einstiegslabel
 .globl _start
 
 .org 0x200 # section beginnt an Adresse 0x200
