--- a/era2/era2_slides_w04.tex
+++ b/era2/era2_slides_w04.tex
@@ -17,6 +17,8 @@
 % and provide a description and minimal working example of your problem.
 %%
 
+%\PassOptionsToClass{onlytextwidth}{beamer}
+
 \documentclass[
   german,            % define the document language (english, german)
   aspectratio=169,    % define the aspect ratio (169, 43)
@@ -207,7 +209,7 @@ jalr zero, 0(ra)
 
 \begin{frame}[c, fragile]{Rekursion: Beispiel}{}
   \begin{columns}[c]
-    \begin{column}{0.4\textwidth}
+    \begin{column}{0.4\linewidth}
       \begin{lstlisting}[
         basicstyle=\ttfamily,
         numbers=left,
@@ -232,7 +234,7 @@ fun:
       \end{lstlisting}
       \small \textbf{Achtung}: 8 Byte nicht CC-konform, nur zur besseren Darstellung
     \end{column}
-    \begin{column}{0.5\textwidth}
+    \begin{column}{0.5\linewidth}
       \begin{enumerate}
         \item Abbruchbedingung(en)
         \item Sicherung von \verb|ra| und evtl. Parametern
