--- a/era2/era2_slides_w05.tex
+++ b/era2/era2_slides_w05.tex
@@ -17,6 +17,8 @@
 % and provide a description and minimal working example of your problem.
 %%
 
+\PassOptionsToClass{onlytextwidth}{beamer}
+
 \documentclass[
   german,            % define the document language (english, german)
   aspectratio=169,    % define the aspect ratio (169, 43)
